test/statements/vass/index-variable-const-errors2.future
bug: incomplete const checking for zippered iteration with tuple index
